<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_16"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_weight="5"
            android:hint="@string/hint_search"
            android:singleLine="true"
            android:textColorLink="@color/black"
            android:textSize="@dimen/font_14" />

        <ImageButton
            android:id="@+id/ibtn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@drawable/ic_search" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_search">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_current"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginEnd="@dimen/dimen_16">

                <ImageView
                    android:id="@+id/iv_weather"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/ic_cloudy"
                    app:layout_constraintBottom_toBottomOf="@id/tv_title_wind"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_16"
                    android:singleLine="false"
                    android:text="@string/text_temp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_18"
                    app:layout_constraintStart_toEndOf="@id/iv_weather"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_space"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:text="@string/text_space"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_20"
                    app:layout_constraintStart_toEndOf="@id/tv_weather"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_weather_dsc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:singleLine="false"
                    android:text="@string/text_temp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_18"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_space"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:background="#d4dccf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_weather"
                    app:layout_constraintTop_toBottomOf="@id/tv_weather" />

                <TextView
                    android:id="@+id/tv_title_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:drawableLeft="@drawable/ic_temp"
                    android:text="@string/text_title_temp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toStartOf="@id/tv_weather"
                    app:layout_constraintTop_toBottomOf="@id/line1" />

                <TextView
                    android:id="@+id/tv_colon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/text_colon"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toEndOf="@id/tv_title_temp"
                    app:layout_constraintTop_toBottomOf="@id/line1" />

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/text_temp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toEndOf="@id/tv_colon"
                    app:layout_constraintTop_toBottomOf="@id/line1" />

                <TextView
                    android:id="@+id/tv_temp_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/text_temp_unit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toEndOf="@id/tv_temp"
                    app:layout_constraintTop_toBottomOf="@id/line1" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:background="#d4dccf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_weather"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_temp" />

                <TextView
                    android:id="@+id/tv_title_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:drawableLeft="@drawable/ic_humidity"
                    android:text="@string/text_title_humidity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toStartOf="@id/tv_weather"
                    app:layout_constraintTop_toBottomOf="@id/line2" />

                <TextView
                    android:id="@+id/tv_colon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/text_colon"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toStartOf="@id/tv_colon"
                    app:layout_constraintTop_toBottomOf="@id/line2" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/text_temp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toStartOf="@id/tv_temp"
                    app:layout_constraintTop_toBottomOf="@id/line2" />

                <View
                    android:id="@+id/line3"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:background="#d4dccf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_weather"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_humidity" />

                <TextView
                    android:id="@+id/tv_title_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:drawableLeft="@drawable/ic_visibility"
                    android:text="@string/text_title_visibility"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toStartOf="@id/tv_weather"
                    app:layout_constraintTop_toBottomOf="@id/line3" />

                <TextView
                    android:id="@+id/tv_colon3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/text_colon"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toStartOf="@id/tv_colon"
                    app:layout_constraintTop_toBottomOf="@id/line3" />

                <TextView
                    android:id="@+id/tv_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/text_temp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toEndOf="@id/tv_colon3"
                    app:layout_constraintTop_toBottomOf="@id/line3" />

                <View
                    android:id="@+id/line4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:background="#d4dccf"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/tv_weather"
                    app:layout_constraintTop_toBottomOf="@id/tv_title_visibility" />

                <TextView
                    android:id="@+id/tv_title_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:drawableLeft="@drawable/ic_windy"
                    android:text="@string/text_title_wind"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toStartOf="@id/tv_weather"
                    app:layout_constraintTop_toBottomOf="@id/line4" />

                <TextView
                    android:id="@+id/tv_colon4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/text_colon"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toStartOf="@id/tv_colon"
                    app:layout_constraintTop_toBottomOf="@id/line4" />

                <TextView
                    android:id="@+id/tv_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/text_temp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_14"
                    app:layout_constraintStart_toEndOf="@id/tv_colon4"
                    app:layout_constraintTop_toBottomOf="@id/line4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                app:layout_constraintTop_toBottomOf="@id/cl_current">

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_forecast"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>